Fix menu for mobile view
Hides menu separators on header and footer because they look bad
on mobile.

--- a/product-landing-page/css/main.css
+++ b/product-landing-page/css/main.css
@@ -186,7 +186,7 @@ ul {
     line-height: 1.6;
 }
 
-@media (max-width: 700px){ 
+@media (max-width: 700px){
     nav a,
     nav a:hover, 
     nav a:visited {
@@ -212,6 +212,9 @@ ul {
     }
     section #container {
         flex-direction: column;
+    }
+    .separators {
+        display: none;
     }
     
 }
